# RhysDeimel.github.io

./: .gitignore  .spellcheck.yml  .wordlist.txt  CNAME  README.md  archives.html  authors.html  categories.html  index.html  markdown-test-page.html  mkdocs.yml  my-first-review.html  my-second-review.html  nmap-and-wsl.html  pelicanconf.py  pyproject.toml  requirements.txt  tags.html  up-and-running-creating-the-site-with-pelican.html  zensical.toml
.github/workflows/: on_pr.yml  publish.yml  spellcheck.yml
author/: rhys-deimel.html
category/: howto.html  review.html  test.html
content/: another-test.md  last-article.md  lorem-ipsum.md  markdown-test.md  pxe.md  pyspelling.md  third-page.md  wireguard_ubuntu_2204.md
content/extra/: humans.txt  site.webmanifest
content/pages/: 404.md
content/posts/2022/: proxmox_7_on_an_hp_microserver_gen8.md  (+1 more)
docs/: my_new_laptop.md
docs/posts/: hello-world.md
docs/stylesheets/: extra.css
drafts/: home-network-shenanigans.html  markdown-test-page.html  microserver-upgrade-issues.html  nmap-and-wsl.html  up-and-running-creating-the-site-with-pelican.html
helpers/: date_check.py
old/: publishconf.py
output/: categories.html  index.html  my-first-review.html  tags.html
output/category/: review.html
overrides/: 404.html
overrides/partials/: header.html  logo.html
tag/: nmap.html  pelican.html  python.html  travis.html  windows.html  wsl.html
theme/templates/: archives.html  article.html  base.html  category.html  index.html  page.html  tag.html
tmp/: mkdocs.yml  requirements.txt
tmp/overrides/: 404.html
(+9 files in other folders)
