[build-system]
requires = ["setuptools>=82.0.1", "setuptools-scm[simple]>=10.0.5"]
build-backend = "setuptools.build_meta"


[project]
name = "blog"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6",
    "mkdocs-rss-plugin==1.19.0",
    "pyspelling==2.12.1",
]
